<resources>
    <string name="app_name">Contact Demo</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="home_number">Home Number</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="edit">UPDATE</string>
    <string name="in_development">In-Development</string>
</resources>
