<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mohsin.contactdemo.EditContact.EditContact">
    <include layout="@layout/toolbaar" />

    <ScrollView
        android:id="@+id/aaa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative0"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:id="@+id/relative2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="05dp"
                android:gravity="center">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/left_drawable_style"
                        android:background="@mipmap/ic_left_name" />

                    <com.mohsin.contactdemo.CustomTextInputLayout
                        android:id="@+id/input_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/ed_firstname"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/name"
                            android:inputType="textCapWords" />

                    </com.mohsin.contactdemo.CustomTextInputLayout>-->
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative2"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/left_drawable_style"
                        android:background="@mipmap/ic_left_name" />

                    <com.mohsin.contactdemo.CustomTextInputLayout
                        android:id="@+id/input_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/ed_number"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"

                            android:hint="@string/number"
                            android:inputType="number" />

                    </com.mohsin.contactdemo.CustomTextInputLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative3"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/left_drawable_style"
                        android:background="@mipmap/ic_left_name" />

                    <com.mohsin.contactdemo.CustomTextInputLayout
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/ed_email"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />
                    </com.mohsin.contactdemo.CustomTextInputLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/city_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relative4"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        style="@style/left_drawable_style"
                        android:background="@mipmap/ic_left_name" />

                    <com.mohsin.contactdemo.CustomTextInputLayout
                        android:id="@+id/input_homenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/ed_homenumber"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/home_number"
                            android:text="@string/in_development"
                            android:inputType="textPersonName" />
                    </com.mohsin.contactdemo.CustomTextInputLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/city_layout"

                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginTop="8dp"
                        android:background="@mipmap/ic_left_name" />

                    <com.mohsin.contactdemo.CustomTextInputLayout
                        android:id="@+id/input_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/ed_company"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/company"
                            android:text="@string/in_development"
                            android:inputType="textPersonName" />
                    </com.mohsin.contactdemo.CustomTextInputLayout>

                </LinearLayout>
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/edit"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@color/blue"/>

    </LinearLayout>


</LinearLayout>